--- a/package.json
+++ b/package.json
@@ -22,47 +22,48 @@
     "@hypergraph-xyz/wikidata-identifiers": "^1.1.1",
     "@n8tb1t/use-scroll-position": "^1.0.43",
     "@p2pcommons/sdk-js": "^0.6.2",
-    "adm-zip": "^0.4.14",
+    "adm-zip": "^0.4.16",
     "dat-encoding": "^5.0.1",
     "del": "^5.1.0",
-    "electron-debug": "^3.0.1",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-store": "^5.1.1",
+    "electron-debug": "^3.1.0",
+    "electron-devtools-installer": "^3.1.0",
+    "electron-store": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "polished": "^3.4.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
+    "polished": "^3.6.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^4.4.1"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-knobs": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
     "@svgr/webpack": "^5.2.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "electron": "^7.1.1",
-    "electron-builder": "^21.2.0",
-    "electron-builder-notarize": "^1.1.2",
-    "file-loader": "^5.1.0",
-    "np": "^5.2.1",
-    "prettier-standard": "^16.2.1",
-    "spectron": "^9.0.0",
-    "standard": "^14.3.3",
+    "electron": "^9.1.0",
+    "electron-builder": "^22.7.0",
+    "electron-builder-notarize": "^1.2.0",
+    "file-loader": "^6.0.0",
+    "np": "^6.3.2",
+    "prettier-standard": "^16.4.1",
+    "spectron": "^11.1.0",
+    "standard": "^14.3.4",
     "tap": "^14.9.2",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-node-externals": "^2.5.0"
   },
   "build": {
+    "appId": "org.libscie.hypergraph",
     "files": [
       "**/*",
       "build/**/*"
