Add protocol handler. Closes #176 (#209)
* wip

* wip

* hypergraph.app hyper:// works

* opening links when app already running works

* standard

* clean up

* fmt

* cleanup

* Fix find modal. Closes #210

* add mac support (untested)

* fix standard

--- a/package.json
+++ b/package.json
@@ -96,6 +96,12 @@
     "afterSign": "electron-builder-notarize",
     "mac": {
       "hardenedRuntime": true
+    },
+    "protocols": {
+      "name": "Hyper",
+      "schemes": [
+        "hyper"
+      ]
     }
   }
 }
