--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electron-store": "^5.2.0",
     "focus-visible": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "is-online": "^8.4.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
