Update protocol to hypergraph://. Closes #216 (#224)
* Update protocol to hypergraph://. Closes #216

* fix find modal trailing slash / no protocol

--- a/package.json
+++ b/package.json
@@ -99,9 +99,9 @@
       "hardenedRuntime": true
     },
     "protocols": {
-      "name": "Hyper",
+      "name": "Hypergraph",
       "schemes": [
-        "hyper"
+        "hypergraph"
       ]
     }
   }
