--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hypergraph-xyz/wikidata-identifiers": "^1.1.1",
     "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js",
     "adm-zip": "^0.4.16",
+    "chmodr": "^1.2.0",
     "dat-encoding": "^5.0.1",
     "del": "^5.1.0",
     "electron-debug": "^3.1.0",
