--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypergraph-desktop",
-  "productName": "Hypergraph",
+  "productName": "Hypergraph (Beta)",
   "author": "Liberate Science GmbH",
   "version": "0.6.0",
   "description": "Hypergraph Desktop app",
@@ -35,6 +35,7 @@
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
