--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "del": "^5.1.0",
     "electron-debug": "^3.1.0",
     "electron-devtools-installer": "^3.1.0",
+    "electron-log": "^4.2.4",
     "electron-store": "^5.2.0",
+    "electron-updater": "^4.3.5",
     "focus-visible": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "is-online": "^8.4.0",
