--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
+    "reactour": "^1.18.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
