--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^3.2.0",
     "is-online": "^8.4.0",
     "node-fetch": "^2.6.0",
+    "p-timeout": "^3.2.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
