--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@hypergraph-xyz/wikidata-identifiers": "^1.2.0",
-    "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js",
+    "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js#ef1b1d14c19dda9e9fd519370d746da69bd5cf98",
     "adm-zip": "^0.4.16",
     "chmodr": "^1.0.2",
     "dat-encoding": "^5.0.1",
