--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hypergraph-xyz/wikidata-identifiers": "^1.2.0",
+    "@matejmazur/react-katex": "^3.1.3",
     "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js#6fbc85937063257e8d70e81f7f303b3f2dfe2c07",
     "adm-zip": "^0.4.16",
     "chmodr": "^1.0.2",
@@ -30,6 +31,7 @@
     "electron-log": "^4.2.4",
     "electron-store": "^5.2.0",
     "electron-updater": "^4.3.5",
+    "express": "^4.17.1",
     "focus-visible": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "is-online": "^8.4.0",
@@ -39,10 +41,15 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "react-spring": "^8.0.27",
     "reactour": "^1.18.0",
+    "remark": "^13.0.0",
+    "remark-behead": "^2.3.3",
+    "remark-gfm": "^1.0.0",
+    "remark-math": "^4.0.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
