--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@hypergraph-xyz/wikidata-identifiers": "^1.2.0",
+    "@libscie/design-library": "^1.0.1",
     "@matejmazur/react-katex": "^3.1.3",
     "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js#6fbc85937063257e8d70e81f7f303b3f2dfe2c07",
     "adm-zip": "^0.4.16",
