--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@hypergraph-xyz/wikidata-identifiers": "^1.2.0",
     "@libscie/design-library": "^1.0.1",
     "@matejmazur/react-katex": "^3.1.3",
-    "@p2pcommons/sdk-js": "github:p2pcommons/sdk-js#6fbc85937063257e8d70e81f7f303b3f2dfe2c07",
+    "@p2pcommons/sdk-js": "^0.9.0",
     "adm-zip": "^0.4.16",
     "chmodr": "^1.0.2",
     "dat-encoding": "^5.0.1",
@@ -34,6 +34,7 @@
     "electron-updater": "^4.3.5",
     "express": "^4.17.1",
     "focus-visible": "^5.1.0",
+    "fs-extra": "^9.1.0",
     "html-webpack-plugin": "^3.2.0",
     "is-online": "^8.4.0",
     "node-fetch": "^2.6.0",
